barras superior e inferior

--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>DrivenEats</title>
 
-    <link href="reset.css" rel="stylesheet" />
-    <link rel="stylesheet" href="estilo.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>DrivenEats</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    
-  </head>
+  <link href="reset.css" rel="stylesheet" />
+  <link href="estilos.css" rel="stylesheet" />
 
-  <body>
-  </body>  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+</head>
+
+<body>
+  <div class="conteinertudo">
+    <div class="tudo">
+      <div class="barrasup">
+        <div class="conteinerbarrasup">
+          <div class="titulao">
+            DrivenEats
+          </div>
+          <div class="subtitulao">
+            Sua comida em 6 minutos
+          </div>
+        </div>
+      </div>
+      <div class="barrainf">
+        <div class="conteinerbarrainf">
+          Selecione os 3 itens<br> para fechar o pedido
+        </div>
+      </div>
+    </div class="tudo">
+  </div class="conteinertudo">
+</body>
 
 </html>
