--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
   <div class="conteinertudo">
     <div class="tudo">
+
       <div class="barrasup">
         <div class="conteinerbarrasup">
           <div class="titulao">
@@ -27,11 +28,76 @@
           </div>
         </div>
       </div>
+
       <div class="barrainf">
         <div class="conteinerbarrainf">
           Selecione os 3 itens<br> para fechar o pedido
         </div>
       </div>
+
+      <div class="conteinercategorias">
+
+        <div class="titulocat">
+          Primeiro, seu prato
+        </div>
+
+        <div class="prato">
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/feijoada.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Feijoada
+                </div>
+                <div class="descricaoitem">
+                  Feijão com arroz, hmmmm que delícia
+                </div>
+                <div class="precoitem">
+                  R$ 14,90
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/feijoada.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Feijoada
+                </div>
+                <div class="descricaoitem">
+                  Feijão com arroz, hmmmm que delícia
+                </div>
+                <div class="precoitem">
+                  R$ 14,90
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/feijoada.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Feijoada
+                </div>
+                <div class="descricaoitem">
+                  Feijão com arroz, hmmmm que delícia
+                </div>
+                <div class="precoitem">
+                  R$ 14,90
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </div class="tudo">
   </div class="conteinertudo">
 </body>
