--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 
           <div class="conteineritens">
             <div class="itens">
-              <img src="./imagens/feijoada.jpg" class="imagem">
+              <img src="./imagens/macaxeira.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
-                  Feijoada
+                  Carne de Sol
                 </div>
                 <div class="descricaoitem">
-                  Feijão com arroz, hmmmm que delícia
+                  E vem uma macaxeira frita, gostoso demais!
                 </div>
                 <div class="precoitem">
-                  R$ 14,90
+                  R$ 25,90
                 </div>
               </div>
             </div>
@@ -79,16 +79,133 @@
 
           <div class="conteineritens">
             <div class="itens">
-              <img src="./imagens/feijoada.jpg" class="imagem">
+              <img src="./imagens/cusucz.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
-                  Feijoada
+                  Cuscuz temperado
                 </div>
                 <div class="descricaoitem">
-                  Feijão com arroz, hmmmm que delícia
+                  Bem quentinho, chega<br> a manteiga derrete!
                 </div>
                 <div class="precoitem">
-                  R$ 14,90
+                  R$ 19,90
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="titulocat">
+          Agora, sua bebida
+        </div>
+
+        <div class="prato">
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/agua.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Água
+                </div>
+                <div class="descricaoitem">
+                  A boa e velha água
+                </div>
+                <div class="precoitem">
+                  R$ 3,50
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/caldo.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Caldo de Cana
+                </div>
+                <div class="descricaoitem">
+                  Bem docinho 
+                </div>
+                <div class="precoitem">
+                  R$ 5,90
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/suco.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Suco de Laranja
+                </div>
+                <div class="descricaoitem">
+                  Laranja + água
+                </div>
+                <div class="precoitem">
+                  R$ 6,50
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="titulocat">
+          Por fim, sua sobremesa
+        </div>
+
+        <div class="prato">
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/dindin.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Dindim
+                </div>
+                <div class="descricaoitem">
+                  Pedacinho do Céu
+                </div>
+                <div class="precoitem">
+                  R$ 3,50
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/pudim.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Pudim
+                </div>
+                <div class="descricaoitem">
+                  Esse é sem furinho
+                </div>
+                <div class="precoitem">
+                  R$ 5,00
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="conteineritens">
+            <div class="itens">
+              <img src="./imagens/bolo.jpg" class="imagem">
+              <div class="texto">
+                <div class="nomeitem">
+                  Bolo de cenoura com Chocolate
+                </div>
+                <div class="descricaoitem">
+                  Que é que há, velhinho?
+                </div>
+                <div class="precoitem">
+                  R$ 19,90
                 </div>
               </div>
             </div>
