Seleção de itens

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <div class="prato">
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens feijoada branco" onclick="selecionarprato(this)">
               <img src="./imagens/feijoada.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
                   Feijoada
                 </div>
                 <div class="descricaoitem">
-                  Feijão com arroz, hmmmm que delícia
+                  Hmmmm que delícia
                 </div>
                 <div class="precoitem">
                   R$ 14,90
@@ -61,14 +61,14 @@
           </div>
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens carne branco" onclick="selecionarprato(this)">
               <img src="./imagens/macaxeira.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
                   Carne de Sol
                 </div>
                 <div class="descricaoitem">
-                  E vem uma macaxeira frita, gostoso demais!
+                  Gostoso demais
                 </div>
                 <div class="precoitem">
                   R$ 25,90
@@ -78,14 +78,14 @@
           </div>
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens cuscuz branco" onclick="selecionarprato(this)">
               <img src="./imagens/cusucz.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
                   Cuscuz temperado
                 </div>
                 <div class="descricaoitem">
-                  Bem quentinho, chega<br> a manteiga derrete!
+                  Bem quentinho
                 </div>
                 <div class="precoitem">
                   R$ 19,90
@@ -102,7 +102,7 @@
         <div class="prato">
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens agua branco" onclick="selecionarbebida(this)">
               <img src="./imagens/agua.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
@@ -119,7 +119,7 @@
           </div>
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens caldo branco" onclick="selecionarbebida(this)">
               <img src="./imagens/caldo.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
@@ -136,7 +136,7 @@
           </div>
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens suco branco" onclick="selecionarbebida(this)">
               <img src="./imagens/suco.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
@@ -161,7 +161,7 @@
         <div class="prato">
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens dindim" onclick="selecionarsobremesa(this)">
               <img src="./imagens/dindin.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
@@ -178,7 +178,7 @@
           </div>
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens pudim" onclick="selecionarsobremesa(this)">
               <img src="./imagens/pudim.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
@@ -195,17 +195,17 @@
           </div>
 
           <div class="conteineritens">
-            <div class="itens">
+            <div class="itens bolo" onclick="selecionarsobremesa(this)">
               <img src="./imagens/bolo.jpg" class="imagem">
               <div class="texto">
                 <div class="nomeitem">
-                  Bolo de cenoura com Chocolate
+                  Bolo de Cenoura 
                 </div>
                 <div class="descricaoitem">
-                  Que é que há, velhinho?
+                  É bom pra vista
                 </div>
                 <div class="precoitem">
-                  R$ 19,90
+                  R$ 6.90
                 </div>
               </div>
             </div>
