--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <div class="precoitem">
                   R$ 14,90
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconefeijoada icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -73,6 +74,7 @@
                 <div class="precoitem">
                   R$ 25,90
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconemacaxeira icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -90,6 +92,7 @@
                 <div class="precoitem">
                   R$ 19,90
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconecuscuz icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -114,6 +117,7 @@
                 <div class="precoitem">
                   R$ 3,50
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconeagua icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -131,6 +135,7 @@
                 <div class="precoitem">
                   R$ 5,90
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconecaldo icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -148,6 +153,7 @@
                 <div class="precoitem">
                   R$ 6,50
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconesuco icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -173,6 +179,7 @@
                 <div class="precoitem">
                   R$ 3,50
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconedindim icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -190,6 +197,7 @@
                 <div class="precoitem">
                   R$ 5,00
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconepudim icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -207,6 +215,7 @@
                 <div class="precoitem">
                   R$ 6.90
                 </div>
+                <ion-icon name="checkmark-circle" class="escondido iconebolo icone"></ion-icon>
               </div>
             </div>
           </div>
@@ -218,6 +227,8 @@
     </div class="tudo">
   </div class="conteinertudo">
   <script src="scripts.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
