Soma do valor da compra, abrir link do whatsapp web e finalização do projeto

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="barrainf">
-        <div class="conteinerbarrainf">
+        <div class="conteinerbarrainf" onclick="abrirZap(this)">
           Selecione os 3 itens<br> para fechar o pedido
         </div>
       </div>
